fixed the header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="dropdown">
+    <div class="dropdown download">
         <button type="button" class="btn btn-primary col-md-12 dropdown-toggle" data-toggle="dropdown">DOWNLOAD CV<span class="caret"></span></button>
         <ul class="dropdown-menu">
             <li><a href="download/CV%20-%20Bogdan%20Volintiru.docx" download>DOCX</a></li>
@@ -33,24 +33,24 @@
                 <br>
                 <div class="contact text-white row col-md-12">
                     <div class="contact-me row ">
-                        <div class="col-md-3">Date of birth:</div>
-                        <div class="col-md-3">7 February 1991</div>
+                        <div class="col-xs-3">Date of birth:</div>
+                        <div class="col-xs-3">7 February 1991</div>
                     </div>
                     <div class="contact-me row">
-                        <div class="col-md-3">Address:</div>
-                        <div class="col-md-3">Cluj-Napoca</div>
+                        <div class="col-xs-3">Address:</div>
+                        <div class="col-xs-3">Cluj-Napoca</div>
                     </div>
                     <div class="contact-me row">
-                        <div class="col-md-3">Phone:</div>
-                        <div class="col-md-3">0773383299</div>
+                        <div class="col-xs-3">Phone:</div>
+                        <div class="col-xs-3">0773383299</div>
                     </div>
                     <div class="contact-me row">
-                        <div class="col-md-3">Email:</div>
-                        <div class="col-md-3">bogdan.volintiru@yahoo.com</div>
+                        <div class="col-xs-3">Email:</div>
+                        <div class="col-xs-3">bogdan.volintiru@yahoo.com</div>
                     </div>
                     <div class="contact-me row">
-                        <div class="col-md-3">Marital status:</div>
-                        <div class="col-md-3">single</div>
+                        <div class="col-xs-3">Marital status:</div>
+                        <div class="col-xs-3">single</div>
                     </div>
                 </div>
             </div>
