--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bogdan Volintiru - CV</title>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="thirdparty/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="thirdparty/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
     <link href="thirdparty/JosefinBold.css" rel="stylesheet" type="text/css">
