--- a/index.html
+++ b/index.html
@@ -35,23 +35,27 @@
                 <div class="contact text-white row col-md-12">
                     <div class="contact-me row ">
                         <div class="col-xs-3">Date of birth:</div>
-                        <div class="col-xs-3">7 February 1991</div>
+                        <div class="col-xs-9">7 February 1991</div>
                     </div>
                     <div class="contact-me row">
                         <div class="col-xs-3">Address:</div>
-                        <div class="col-xs-3">Cluj-Napoca</div>
+                        <div class="col-xs-9">Cluj-Napoca</div>
                     </div>
                     <div class="contact-me row">
                         <div class="col-xs-3">Phone:</div>
-                        <div class="col-xs-3">0773383299</div>
+                        <div class="col-xs-9">0773383299</div>
                     </div>
                     <div class="contact-me row">
                         <div class="col-xs-3">Email:</div>
-                        <div class="col-xs-3">bogdan.volintiru@yahoo.com</div>
+                        <div class="col-xs-9">bogdan.volintiru@yahoo.com</div>
+                    </div>
+                    <div class="contact-me row">
+                        <div class="col-xs-3">LinkedIn:</div>
+                        <div class="col-xs-9">www.linkedin.com/in/bogdan-volintiru</div>
                     </div>
                     <div class="contact-me row">
                         <div class="col-xs-3">Marital status:</div>
-                        <div class="col-xs-3">single</div>
+                        <div class="col-xs-9">single</div>
                     </div>
                 </div>
             </div>
