--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="contact-me row">
                         <div class="col-xs-3">LinkedIn:</div>
-                        <div class="col-xs-9"><a href="www.linkedin.com/in/bogdan-volintiru">bogdan-volintiru</a></div>
+                        <div class="col-xs-9"><a href="https://www.linkedin.com/in/bogdan-volintiru" target="_blank">bogdan-volintiru</a></div>
                     </div>
                     <div class="contact-me row">
                         <div class="col-xs-3">Marital status:</div>
