fixing linkedin link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="contact-me row">
                         <div class="col-xs-3">Marital status:</div>
-                        <div class="col-xs-9">single</div>
+                        <div class="col-xs-9">Single</div>
                     </div>
                 </div>
             </div>
