--- a/index.html
+++ b/index.html
@@ -66,7 +66,16 @@
             <section class="col-md-12">
                 <div class="glyphicon glyphicon-folder-open text-primary bottom-border col-md-12"> EXPERIENCE</div>
                 <div class="experience col-md-12">
-                    <div><strong>FRONT-END DEVELOPER | 01.2015 - present</strong></div>
+					<div><strong>FRONT-END DEVELOPER | 03.2017 - present</strong></div>
+                    <div><em>* Artsoft Consult *</em></div>
+                    <div>
+                        - I am working on a project for one of the biggest manufacturer of plastic products in Europe<br>
+						- The project is built in AngularJS (Angular 1)<br>
+						- D3 library is used for lots of functionalities in the project<br>
+						- Currently moving everything to Angular (Angular 2/4)<br>
+                    </div>
+                    <br>
+                    <div><strong>FRONT-END DEVELOPER | 01.2015 - 03.2017</strong></div>
                     <div><em>* Xoomworks *</em></div>
                     <div>
                         - Java core training<br>
@@ -100,7 +109,7 @@
                         - Information Design Tool<br>
                     </div>
                     <br>
-                    <div><strong>FRONT-END DEVELOPER | 02.2015 - present</strong></div>
+                    <div><strong>FRONT-END DEVELOPER | 02.2016 - 02.2017</strong></div>
                     <div><em>* Shell *</em></div>
                     <div>
                         - Shell had some poor performing web applications that needed to be rebuilt<br>
