--- a/index.html
+++ b/index.html
@@ -69,10 +69,14 @@
 					<div><strong>FRONT-END DEVELOPER | 03.2017 - present</strong></div>
                     <div><em>* Artsoft Consult *</em></div>
                     <div>
-                        - I am working on a project for one of the biggest manufacturer of plastic products in Europe<br>
-						- The project is built in AngularJS (Angular 1)<br>
-						- D3 library is used for lots of functionalities in the project<br>
-						- Currently moving everything to Angular (Angular 2/4)<br>
+                      - Projects I was involved in:<br>
+                      <ul>
+                      </ul>
+                        <li>one of the biggest manufacturer of plastic products in Europe</li>
+                        <li>a project for managing resources for constructions</li>
+                        <li>a project for monitoring the waste from restaurants 	and improve resource managing</li>
+                      - Technologies used:<br>
+                        <li>angularjs, angular 2/4, nodejs, html, css, javascript, 	jQuery, phonegap, mocha, d3</li>
                     </div>
                     <br>
                     <div><strong>FRONT-END DEVELOPER | 01.2015 - 03.2017</strong></div>
